[package]
name = "vmap"
version = "0.6.3"
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
license = "MIT"
repository = "https://github.com/kalamay/vmap-rs"
documentation = "https://docs.rs/vmap"
description = "Cross-platform library for fast and safe memory-mapped IO and boundary-free ring buffer."
keywords = ["mmap", "io", "file", "circular-buffer", "ring-buffer"]
edition = "2021"

[features]
default = ["all"]
all = ["io", "os", "bytes"]
io = []
os = []
bytes = ["dep:bytes"]

[dependencies]
system_error = "0.2"
bytes = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "basetsd", "minwindef", "sysinfoapi", "handleapi", "memoryapi", "fileapi"] }

[dev-dependencies]
tempdir = "0.3"
